# clab-recipe-synthesis

./: .gitignore  README.md  domain.pddl  problem.pddl  pyproject.toml
recipe_synth/: block_to_piece.py  block_to_piece_with_inventory.py  blockworld.py  blockworld_numeric.py  blockworld_numeric_1type.py  blockworld_numeric_sizeascounter.py  mediumsizedproblem.py  mediumsizedproblem_with_function.py  mediumsizedproblem_with_inventory.py  plan_goal_simulator.py  to_pddl.py
recipe_synth/app/: app.py  callbacks.py
recipe_synth/benchmarks/block_to_piece/: domain.pddl  problem.pddl
recipe_synth/benchmarks/block_to_piece_with_inventor/: domain.pddl  problem.pddl
recipe_synth/dash/: app.py  callbacks.py
recipe_synth/mediumsizedproblem_with_function/: domain.pddl  problem.pddl
recipe_synth/mediumsizedproblem_with_inventor/: domain.pddl  problem.pddl
