[tool.poetry]
name = "recipe-synth"
version = "0.1.0"
description = ""
authors = ["Alessandro Giugno <alessandro.giugno@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyperplan = "^2.1"
unified-planning = {extras = ["aires"], version = "^1.1.0"}
nbformat = "^5.10.4"
pandas = "^2.2.2"
up-enhsp = "^0.0.25"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"


[tool.poetry.group.dash.dependencies]
dash = {extras = ["diskcache"], version = "^2.17.0"}
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
