[tool.poetry]
name = "recipe-synth"
version = "0.2.0"
description = ""
authors = ["Alessandro Giugno <alessandro.giugno@gmx.de>"]
readme = "README.md"
packages = [
    {include = "recipe_synth"},
    {include = "README.md"},
    {include = "recipe_synth/app"}
]

[tool.poetry.dependencies]
python = "^3.12"
unified-planning = {extras = ["aires"], version = "^1.1.0"}
nbformat = "^5.10.4"
pandas = "^2.2.2"
up-enhsp = "^0.0.25"
dash = {extras = ["diskcache"], version = "^2.17.0", optional = true}
tabulate = {version = "^0.9.0", optional = true}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"


[tool.poetry.extras]
dash = ["dash", "tabulate"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
